--- a/stylesheets/gomimaro/gomimaro.css
+++ b/stylesheets/gomimaro/gomimaro.css
@@ -3,17 +3,15 @@
 }
 
 .gomimaro-container{
-	max-width: 100vw;
-	width: 100vw;
+	max-width: 1920px;
+	width: 1920px;
 	height: fit-content;
-	min-height: 56.25vw;
+	min-height: 1080px;
 
 	display: block;
 
 	box-sizing: border-box;
 	padding: 32px;
-
-	background: hsl(120, 75%, 85%);
 }
 
 .gomimaro-container *{
@@ -42,14 +40,14 @@
 /* Message */
 
 .gomimaro-msg-base{
-	min-height: calc(56.25vw - 176px);
+	min-height: 904px;
 	height: fit-content;
 }
 
 .gomimaro-msg-frame{
 	width: 100%;
 	height: fit-content;
-	min-height: calc(56.25vw - 176px);
+	min-height: 904px;
 
 	display: flex;
 	justify-content: center;
@@ -63,4 +61,5 @@
 .gomimaro-msg{
 	font-family: "Noto Sans Serif", "Open Sans";
 	font-size: 64px;
+	text-align: center;
 }
