--- a/stylesheets/index-structure.css
+++ b/stylesheets/index-structure.css
@@ -60,11 +60,77 @@ body *{
 	width: calc(50% - 24px);
 	height: 100%;
 
+	display: block;
 	padding: 16px;
 
 	overflow-y: auto;
 }
 
+.pane > *{
+	max-width: 100%;
+}
+
 /* Modification Pane */
 
+.hue-range{
+	width: 100%;
+	height: fit-content;
+}
+
+.msg-editor{
+	width: 100%;
+	height: fit-content;
+
+	resize: vertical;
+}
+
+.text-btn{
+	width: fit-content;
+	height: fit-content;
+
+	font-size: 20px;
+
+	border: none;
+	border-radius: 4px;
+	padding: 2px 16px;
+	margin: 4px;
+
+	background: #F3F3F3;
+	user-select: none;
+}
+
+.text-btn:hover{
+	background: #FBFBFB;
+}
+
 /* Preview Pane */
+
+.preview-container{
+	height: calc(100% - 80px);
+	overflow-y: auto;
+}
+
+.btn-container{
+	width: 100%;
+	height: 64px;
+
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: center;
+	align-items: center;
+
+	margin-top: 16px;
+}
+
+.img-btn{
+	width: 64px;
+	height: 64px;
+
+	padding: 8px;
+
+	border-radius: 32px;
+}
+
+.img-btn:hover{
+	background: #80808020;
+}
