--- a/stylesheets/index-structure.css
+++ b/stylesheets/index-structure.css
@@ -1,26 +1,26 @@
 /* Global */
-*{
+* {
 	overflow: hidden;
 	touch-action: none;
 }
 
-*::-webkit-scrollbar{
+*::-webkit-scrollbar {
 	display: none;
 }
 
-body{
+body {
 	width: 100vw;
 	height: 100vh;
 
 	display: block;
 }
 
-body *{
+body * {
 	touch-action: auto;
 }
 
 /* Titlebar */
-.titlebar{
+.titlebar {
 	width: 100%;
 	height: 48px;
 
@@ -32,7 +32,7 @@ body *{
 	padding: 4px;
 }
 
-.title-label{
+.title-label {
 	width: fit-content;
 	height: fit-content;
 
@@ -44,7 +44,7 @@ body *{
 }
 
 /* Screen */
-.back{
+.back {
 	width: 100%;
 	height: calc(100% - 48px);
 
@@ -56,7 +56,7 @@ body *{
 	padding: 16px 0px;
 }
 
-.pane{
+.pane {
 	width: calc(50% - 24px);
 	height: 100%;
 
@@ -66,25 +66,27 @@ body *{
 	overflow-y: auto;
 }
 
-.pane > *{
+.pane > * {
 	max-width: 100%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* Modification Pane */
 
-.hue-range{
+.hue-range {
 	width: 100%;
 	height: fit-content;
 }
 
-.msg-editor{
+.msg-editor {
 	width: 100%;
 	height: fit-content;
 
 	resize: vertical;
 }
 
-.text-btn{
+.text-btn {
 	width: fit-content;
 	height: fit-content;
 
@@ -95,29 +97,30 @@ body *{
 	padding: 2px 16px;
 	margin: 4px;
 
-	background: #F3F3F3;
+	background: #D9D9D9;
 	user-select: none;
 }
 
-.text-btn:hover{
-	background: #FBFBFB;
+.text-btn:hover {
+	background: #DDDDDD;
 }
 
 /* Preview Pane */
 
-.preview-container{
+.preview-container {
 	max-height: calc(100% - 80px);
+	width: 100%;
 	height: fit-content;
 	overflow-y: auto;
 }
 
-.preview{
+.preview {
 	width: 100%;
 }
 
-.btn-container{
+.btn-container {
 	width: 100%;
-	height: 64px;
+	height: 48px;
 
 	display: flex;
 	flex-flow: row nowrap;
@@ -127,15 +130,31 @@ body *{
 	margin-top: 16px;
 }
 
-.img-btn{
-	width: 64px;
-	height: 64px;
+.img-btn {
+	width: 48px;
+	height: 48px;
 
-	padding: 8px;
+	padding: 4px;
 
 	border-radius: 32px;
 }
 
-.img-btn:hover{
+.img-btn:hover {
 	background: #80808020;
+}
+
+@media screen and (max-width: 720px) {
+	/* Screen */
+	.back {
+		flex-flow: column-reverse nowrap;
+	}
+
+	.pane{
+		width: 100%;
+		height: 50%;
+	}
+
+	.preview-container {
+		width: 80%;
+	}
 }
